# agentbox.nix

./: .editorconfig  .envrc  .gitignore  .gitlint  .typos.toml  AGENTS.md  Cargo.toml  README.md  REUSE.toml  SPEC.md  biome.json  config.sample.json  devenv.nix  devenv.yaml  flake.nix  justfile  statix.toml  taplo.toml
assets/image/: Containerfile  README.md  bootstrap  entrypoint  justfile  runtime-packages.nix
container-example/: README.md  justfile  runtime-packages.nix
container-example/tests/: podman-runtime-user.sh
docs/: code-agent-exposure.md
docs/architecture/: README.md  cli.md  completion-and-packaging.md  container-execution.md  host-integration.md  image-management-and-cleanup.md  lifecycle-coordination.md  presentation-and-observability.md  runtime-catalog.md  session-discovery.md  state-store.md  workspace-resolution.md
docs/spec/: README.md  cli.md  command-clean.md  command-connect.md  command-exec.md  (+20 more)
scripts/: record-demo.sh
src/: cli.rs  config.rs  dev_env.rs  diagnostic.rs  digest.rs  direnv.rs  error.rs  git.rs  lib.rs  lock.rs  main.rs  metadata.rs  paths.rs  podman.rs  preflight.rs  process.rs  progress.rs  prompt.rs  session.rs  ssh_signing.rs  state.rs  workspace.rs
tests/: cli_attach.rs  cli_clean.rs  cli_completion.rs  cli_config.rs  cli_connect.rs  cli_health.rs  cli_ls.rs  cli_parse.rs  cli_ps.rs  cli_restart.rs  cli_rm.rs  cli_run_errors.rs  cli_run_happy.rs  cli_runtime.rs  cli_stop.rs  error_matrix.rs  locking.rs  metadata_guardrails.rs  process_harness.rs  runtime_adapter.rs  session_status.rs  workspace_identity.rs
(+170 files in other folders)
