#:schema https://json.schemastore.org/cargo.json

[package]
name = "agentbox"
description = "Orchestrate agentbox using Podman and Quadlet"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1"
camino = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
comfy-table = "7"
directories = "6"
fd-lock = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.clippy]
cargo = "warn"
